--- a/.github/workflows/secrets_and_vars.yaml
+++ b/.github/workflows/secrets_and_vars.yaml
@@ -1,6 +1,7 @@
 name: Testing Secrets and Vars
 on:
-  push: ["ci-test"]
+  push: 
+    branches: ["ci"]
 jobs:
   checking-env:
     runs-on: ubuntu-20.04
